modules/algorithms/src/test/resources/PhRepexTestFiles/validRestart/4/LYS_penta.esv
 Number of ESVs and Title :
      1  LYS_penta
 Current Theta Positions :
   -1.4864441712493070E-02
 Current Atomic Velocities :
   -4.9622226071473040E+00
 Current Atomic Accelerations :
    1.1007717074892746E+02
 Current Lambda Histogram(s) :
 ESV: 3-LYS (0) pH: 11.40
        X  [0.0-0.1]  [0.1-0.2]  [0.2-0.3]  [0.3-0.4]  [0.4-0.5]  [0.5-0.6]  [0.6-0.7]  [0.7-0.8]  [0.8-0.9]  [0.9-1.0]
 λ
 [0.0-0.1]        18         0         0         0         0         0         0         0         0         0
 [0.1-0.2]         0         0         0         0         0         0         0         0         0         0
 [0.2-0.3]         0         0         0         0         0         0         0         0         0         0
 [0.3-0.4]         0         0         0         0         0         0         0         0         0         0
 [0.4-0.5]         0         0         0         0         0         0         0         0         0         0
 [0.5-0.6]         0         0         0         0         0         0         0         0         0         0
 [0.6-0.7]         0         0         0         0         0         0         0         0         0         0
 [0.7-0.8]         0         0         0         0         0         0         0         0         0         0
 [0.8-0.9]         0         0         0         0         0         0         0         0         0         0
 [0.9-1.0]         0         0         0         0         0         0         0         0         0         0

