modules/algorithms/src/test/resources/PhRepexTestFiles/invalidAfterPhFail/1/LYS_penta.esv
 Number of ESVs and Title :
      1  LYS_penta
 Current Theta Positions :
    1.4571437255120143E+00
 Current Atomic Velocities :
    3.8638097889678050E+00
 Current Atomic Accelerations :
    2.3096047887407790E+02
 Current Lambda Histogram(s) :
 ESV: 3-LYS (0) pH: 8.40
        X  [0.0-0.1]  [0.1-0.2]  [0.2-0.3]  [0.3-0.4]  [0.4-0.5]  [0.5-0.6]  [0.6-0.7]  [0.7-0.8]  [0.8-0.9]  [0.9-1.0]
 λ
 [0.0-0.1]         9         0         0         0         0         0         0         0         0         0
 [0.1-0.2]         0         0         0         0         0         0         0         0         0         0
 [0.2-0.3]         0         0         0         0         0         0         0         0         0         0
 [0.3-0.4]         0         0         0         0         0         0         0         0         0         0
 [0.4-0.5]         0         0         0         0         0         0         0         0         0         0
 [0.5-0.6]         0         0         0         0         0         0         0         0         0         0
 [0.6-0.7]         0         0         0         0         0         0         0         0         0         0
 [0.7-0.8]         0         0         0         0         0         0         0         0         0         0
 [0.8-0.9]         3         0         0         0         0         0         0         0         0         0
 [0.9-1.0]        36         0         0         0         0         0         0         0         0         0

